--- a/springbootdocker/pom.xml
+++ b/springbootdocker/pom.xml
@@ -46,6 +46,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>springbootdocker</finalName>
 	</build>
 
 </project>
