--- a/Spring-boot-tutorial/src/main/resources/application.properties
+++ b/Spring-boot-tutorial/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8082
 
 # H2 Database
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:mem:dcbapp
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
