--- a/youtube-clone-react-redux/package.json
+++ b/youtube-clone-react-redux/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.2",
     "firebase": "^8.2.0",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^1.6.6",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
@@ -28,7 +30,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "sass": "^1.60.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "youtube-player": "^5.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
